--- a/app/src/main/res/layout/item_movies_trending.xml
+++ b/app/src/main/res/layout/item_movies_trending.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="160dp"
+    android:id="@+id/rootView"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="3dp"
     android:layout_marginVertical="2dp"
