--- a/app/src/main/res/navigation/nav_tab_home.xml
+++ b/app/src/main/res/navigation/nav_tab_home.xml
@@ -9,8 +9,32 @@
         android:id="@+id/homeFragment"
         android:name="com.hvasoftware.wikifilm.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
 
+        <action
+            android:id="@+id/action_to_detailMovieFragment"
+            app:destination="@id/detailMovieFragment" />
 
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailMovieFragment"
+        android:name="com.hvasoftware.wikifilm.ui.home.DetailMovieFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/fragment_detail_movie" >
+
+        <argument
+            android:name="movieId"
+            android:defaultValue="1"
+            app:argType="string"
+            app:nullable="true" />
+
+        <argument
+            android:name="type"
+            android:defaultValue="movie"
+            app:argType="string"
+            app:nullable="true" />
+
+    </fragment>
 
 </navigation>
