--- a/app/src/main/res/layout/fragment_detail_actor.xml
+++ b/app/src/main/res/layout/fragment_detail_actor.xml
@@ -76,13 +76,29 @@
             app:layout_constraintEnd_toEndOf="@id/rvActorImage"
             app:layout_constraintTop_toTopOf="@id/rvActorImage" />
 
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/civActor"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:src="@drawable/actor_1"
+            app:civ_border_color="#3f51b5"
+            app:civ_border_width="4dp"
+            app:civ_shadow="true"
+            app:civ_shadow_color="#3f51b5"
+            app:civ_shadow_radius="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/rvActorImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rvActorImage" />
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivActor"
             android:layout_width="100dp"
             android:layout_height="123dp"
             android:layout_marginStart="20dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/actor_1"
+            android:visibility="gone"
+            tools:src="@drawable/actor_1"
             app:layout_constraintBottom_toBottomOf="@+id/rvActorImage"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rvActorImage"
@@ -96,13 +112,12 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="4dp"
-            android:gravity="start"
             android:text="@string/app_name"
             android:textColor="@color/yellow_800"
             android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ivActor"
-            app:layout_constraintTop_toBottomOf="@+id/rvActorImage" />
+            app:layout_constraintTop_toBottomOf="@+id/civActor" />
 
         <TextView
             android:id="@+id/tvActorInfo"
