--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,7 +101,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Trending"
                 android:textColor="@color/white"
-                android:textSize="40sp"
+                android:textSize="27sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -125,66 +125,22 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFilterTrending"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="8dp"
-            android:gravity="center_vertical"
+            android:layout_marginTop="12dp"
             android:orientation="horizontal"
-            android:paddingHorizontal="8dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@id/tvTrendingTitle"
-            app:layout_constraintStart_toEndOf="@+id/tvTrendingTitle"
-            app:layout_constraintTop_toTopOf="@+id/tvTrendingTitle">
-
-            <TextView
-                android:id="@+id/typeAll"
-                style="@style/app_text_semi_bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/bg_view_small_type_selected"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="4dp"
-                android:text="All"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/typeTVSeries"
-                style="@style/app_text_semi_bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/bg_view_small_type"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="4dp"
-                android:text="TV Series"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/typeMovie"
-                style="@style/app_text_semi_bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp"
-                android:layout_marginStart="8dp"
-                android:background="@drawable/bg_view_small_type"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="4dp"
-                android:text="Movie"
-                android:textColor="@color/white" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_filter_type" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTrending"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="12dp"
             android:orientation="horizontal"
             android:paddingHorizontal="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -203,9 +159,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Top Rated"
+                android:text="Movie's"
                 android:textColor="@color/white"
-                android:textSize="40sp"
+                android:textSize="27sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -227,6 +183,92 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFilterMovie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_filter_type" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMovies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_movies_trending" />
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp">
+
+
+            <TextView
+                android:id="@+id/tvPopularTitle"
+                style="@style/app_text_semi_bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="TV Series"
+                android:textColor="@color/white"
+                android:textSize="27sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                style="@style/app_text_semi_bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="8dp"
+                android:text="SHOW ALL"
+                android:textAllCaps="true"
+                android:textColor="@color/blue_700"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFilterTVSeries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_filter_type" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTVSeries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_movies_trending" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
