--- a/app/src/main/res/layout/fragment_actors.xml
+++ b/app/src/main/res/layout/fragment_actors.xml
@@ -23,6 +23,7 @@
         android:id="@+id/pbLoading"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
