--- a/app/src/main/res/layout/header_bar.xml
+++ b/app/src/main/res/layout/header_bar.xml
@@ -31,7 +31,7 @@
         android:ellipsize="end"
         android:gravity="start"
         android:maxLines="1"
-        android:textColor="@color/yellow_800"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivMenu"
