--- a/app/src/main/res/layout/fragment_actors.xml
+++ b/app/src/main/res/layout/fragment_actors.xml
@@ -58,7 +58,7 @@
     <ProgressBar
         android:id="@+id/pbLoading"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:visibility="gone" />
